Add POC logs